RESOLVED FIXED268758
Guard against thread safety issues related to assertions
https://bugs.webkit.org/show_bug.cgi?id=268758
Summary Guard against thread safety issues related to assertions
Per Arne Vollan
Reported 2024-02-05 10:15:31 PST
Guard against thread safety issues related to assertions, since the assertion usually is taken off the main thread.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-05 10:16:03 PST
Per Arne Vollan
Comment 2 2024-02-05 10:19:49 PST
EWS
Comment 3 2024-02-05 17:00:08 PST
Committed 274122@main (139582260169): <https://commits.webkit.org/274122@main> Reviewed commits have been landed. Closing PR #23869 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.