Cherry-pick 139582260169. rdar://122321271

Guard against thread safety issues related to assertions
    https://bugs.webkit.org/show_bug.cgi?id=268758
    rdar://122321271

    Reviewed by Chris Dumez.

    Guard against thread safety issues related to assertions, since they are usually acquired on a non-main thread.

    * Source/WebKit/UIProcess/Cocoa/ProcessAssertionCocoa.mm:
    (WebKit::ProcessAssertion::acquireSync):
    (WebKit::ProcessAssertion::~ProcessAssertion):
    * Source/WebKit/UIProcess/ProcessAssertion.h:

    Canonical link: https://commits.webkit.org/274122@main

Identifier: 272448.507@safari-7618-branch